icons on aside added

--- a/Exercise2/distributed-systems.html
+++ b/Exercise2/distributed-systems.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/grid.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Distributed Systems| SkillDev</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
             </div>
             <!-- Webpage name -->
             <div class="page-name">
-                <h1>SkillDev</h1>
+               <h1>SkillDev</h1> 
             </div>
             <!-- Webpage menu -->
             <div class="page-menu">
@@ -60,11 +61,11 @@
                 <nav>
                     <h2>Courses</h2>
                     <ul>
-                        <li><a href="#ds-course-1">Parallel Programming in Java</a></li>
-                        <li><a href="#ds-course-2">Concurrent Programming in Java</a></li>
-                        <li><a href="#ds-course-3">Distributed Programming in Java</a></li>
-                        <li><a href="#ds-course-4">Cloud Computing Concepts, Part 1</a></li>
-                        <li><a href="#ds-course-5">Cloud Computing Concepts: Part 2</a></li>
+                        <li><i class="fa fa-cloud"><a href="#ds-course-1">Parallel Programming in Java</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ds-course-2">Concurrent Programming in Java</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ds-course-3">Distributed Programming in Java</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ds-course-4">Cloud Computing Concepts, Part 1</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ds-course-5">Cloud Computing Concepts: Part 2</a></i></li>
                     </ul>
                 </nav>
             </aside>
