--- a/Exercise2/machine-learning.html
+++ b/Exercise2/machine-learning.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/grid.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Machine Learning | SkillDev</title>
 </head>
 <body>
@@ -64,11 +65,11 @@
                 <nav>
                     <h2>Courses</h2>
                     <ul>
-                        <li><a href="#ml-course-1">Neural Networks and Deep Learning</a></li>
-                        <li><a href="#ml-course-2">Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</a></li>
-                        <li><a href="#ml-course-3">Structuring Machine Learning Projects</a></li>
-                        <li><a href="#ml-course-4">Convolutional Neural Networks</a></li>
-                        <li><a href="#ml-course-5">Sequence Models</a></li>
+                        <li><i class="fa fa-cloud"><a href="#ml-course-1">Neural Networks and Deep Learning</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ml-course-2">Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ml-course-3">Structuring Machine Learning Projects</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ml-course-4">Convolutional Neural Networks</a></i></li>
+                        <li><i class="fa fa-cloud"><a href="#ml-course-5">Sequence Models</a></i></li>
                     </ul>
                 </nav>
             </aside>
