--- a/Exercise2/web-dev.html
+++ b/Exercise2/web-dev.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/grid.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Web Devlopemnt | SkillDev</title>
 </head>
 <body>
@@ -61,11 +62,11 @@
             <nav>
                 <h2>Courses</h2>
                 <ul>
-                    <li><a href="#wb-course-1">Introduction to HTML</a></li>
-                    <li><a href="#wb-course-2">Cascading Style Sheets</a></li>
-                    <li><a href="#wb-course-3">Website Functionality - JS</a></li>
-                    <li><a href="#wb-course-4">Full-Stack Developement</a></li>
-                    <li><a href="#wb-course-5">Introduction to APIs</a></li>
+                    <li><i class="fa fa-cloud"><a href="#wb-course-1">Introduction to HTML</a></i></li>
+                    <li><i class="fa fa-cloud"><a href="#wb-course-2">Cascading Style Sheets</a></i></li>
+                    <li><i class="fa fa-cloud"><a href="#wb-course-3">Website Functionality - JS</a></i></li>
+                    <li><i class="fa fa-cloud"><a href="#wb-course-4">Full-Stack Developement</a></i></li>
+                    <li><i class="fa fa-cloud"><a href="#wb-course-5">Introduction to APIs</a></i></li>
                 </ul>
             </nav>
         </aside>
