--- a/Exercise2/contact.html
+++ b/Exercise2/contact.html
@@ -108,25 +108,26 @@
                     <input type="submit" value="Submit">
                 </div>
             </form>
-
-            <aside class="help-bar">
-                <nav>
-                    <h2>Frequently Asked Questions</h2>
-                    <dl>
-                        <dt>What are your Billing Oprtions</dt>
-                    <dd>
-                        We accept credit, debit and prepaid cards.
-                    </dd>
-                    <dt>I need more information about a provided course</dt>
-                    <dd>
-                        Try contanting us using the form on this page!
-                    <dt>Which Organisation supporst this page?</dt>
-                    <dd>
-                        Athens Uneversity of Economics and Buisness
-                    </dd>
-                </nav>
+            
+            <div class="help-bar">
+                <aside class="sidebar">
+                    <nav>
+                        <h2>Frequently Asked Questions</h2>
+                        <dl>
+                            <dt>What are your Billing Oprtions</dt>
+                        <dd>
+                            We accept credit, debit and prepaid cards.
+                        </dd>
+                        <dt>I need more information about a provided course</dt>
+                        <dd>
+                            Try contanting us using the form on this page!
+                        <dt>Which Organisation supporst this page?</dt>
+                        <dd>
+                            Athens Uneversity of Economics and Buisness
+                        </dd>
+                    </nav>
                 </aside>
-            </aside>
+            </div>
     </main>
 
     <!-- Footer bar -->
