contact form media

--- a/Exercise2/contact.html
+++ b/Exercise2/contact.html
@@ -7,13 +7,14 @@
     <meta name="description" content="Free online classes for numerus Computer Science fields.">
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/generally_appliable.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    
     <title>Contact | SkillDev</title>
 </head>
 <body>  
    <!-- Header bar -->
-   <div class="wrapper">
+   <div class="wrapper" id="form-wrapper">
    <header class="container">  
         <!-- Navigation bar -->
         <nav class="navbar">
@@ -37,7 +38,7 @@
         </nav>
     </header> 
 
-    <main class="main-container">
+    <main class="main-container" id="main_form">
         <!-- Page banner -->
         <section id="form-about" class="about">
             <div class="section-title">
