--- a/Exercise4/index.html
+++ b/Exercise4/index.html
@@ -94,7 +94,10 @@
                 </dl>
             </div>
             <div class="banner-right">
-                <img src="img/banner-rubics-cube.png" alt="rubics cube">
+                <img srcset="img/banner-rubics-cube-50.png 393w, img/banner-rubics-cube-100.png 786w"
+                     sizes=" (max-width: 768px) 40vw, 30vw" 
+                     src="img/banner-rubics-cube-100.png" 
+                     alt="rubics cube">
             </div>
         </section>
     </main>
