--- a/Exercise5/contact.html
+++ b/Exercise5/contact.html
@@ -51,7 +51,7 @@
         </section>
 
             <!-- Contact form -->
-            <form class="contact-form" action="/process_form" method="post">
+            <form class="contact-form" action="/" method="GET">
                 <!-- User information -->
                 <fieldset class="user-info">
                     <legend>Contact Information</legend>
