style sheet complete

--- a/Exercise5/subscribe.html
+++ b/Exercise5/subscribe.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Georgios-Stefanos Meidanis (3170107), Lampros Lountzis (3170095)">
     <meta name="keywords" content="MOOC, Free, Online, Classes, CS, Informatics, SkillDev">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/ga.css" rel="stylesheet">
+    <!-- <link href="css/ga.css" rel="stylesheet"> -->
     <script>src="script/validation.js"</script>
     <title>Subscribe | SkillDev</title>
 </head>
