project part 1 fin

--- a/Exercise5/index.html
+++ b/Exercise5/index.html
@@ -42,7 +42,7 @@
             <div class="banner-left">
                 <h2>Take the next step toward your goals with SkillDev.</h2>
                 <p>Join now to receive personalized recommendations from the full SkillDev catalog.</p>
-                <a class="signup" href="#">Join for Free</a>
+                <a class="signup" href="subscribe.html">Join for Free</a>
             </div>
             <div class="banner-right">
                 <img src="img/banner-welcome.jpg" alt="welcome banner image">
